🐛 (generate_data.ipynb): fix typo in DATASET_DIR variable from 'datasets' to 'data_sets' to align with naming convention

--- a/generate_data.ipynb
+++ b/generate_data.ipynb
@@ -56,7 +56,7 @@
     "N_SAMPLES = 1000  # Number of samples to generate\n",
     "NOISE_LEVELS = [0.0, 0.2, 0.5, 0.8]  # Different noise levels to test\n",
     "MODEL_DIR = 'models'\n",
-    "DATASET_DIR = 'datasets'\n",
+    "DATASET_DIR = 'data_sets'\n",
     "\n",
     "# Create directories for saving models and datasets\n",
     "os.makedirs(MODEL_DIR, exist_ok=True)\n",
