Fix minor issues in files

--- a/generate_data.ipynb
+++ b/generate_data.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,41 +95,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/sadra/miniconda3/envs/pokerbot39/lib/python3.9/site-packages/keras/src/layers/convolutional/base_conv.py:107: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
-      "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "\u001b[1m85/85\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 10ms/step - accuracy: 0.3317 - loss: 1.0992 - val_accuracy: 0.3600 - val_loss: 1.0982\n",
+      "25/25 [==============================] - 2s 33ms/step - loss: 1.0990 - accuracy: 0.3050 - val_loss: 1.0992 - val_accuracy: 0.2900\n",
       "Epoch 2/10\n",
-      "\u001b[1m85/85\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 9ms/step - accuracy: 0.3512 - loss: 1.0983 - val_accuracy: 0.3600 - val_loss: 1.0958\n",
+      "25/25 [==============================] - 1s 21ms/step - loss: 1.0983 - accuracy: 0.3537 - val_loss: 1.1009 - val_accuracy: 0.2900\n",
       "Epoch 3/10\n",
-      "\u001b[1m85/85\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 9ms/step - accuracy: 0.3561 - loss: 1.0914 - val_accuracy: 0.4250 - val_loss: 1.0527\n",
+      "25/25 [==============================] - 1s 21ms/step - loss: 1.0978 - accuracy: 0.3537 - val_loss: 1.1004 - val_accuracy: 0.2900\n",
       "Epoch 4/10\n",
-      "\u001b[1m85/85\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 9ms/step - accuracy: 0.6442 - loss: 0.9681 - val_accuracy: 0.9200 - val_loss: 0.6177\n",
+      "25/25 [==============================] - 1s 22ms/step - loss: 1.0963 - accuracy: 0.3537 - val_loss: 1.0995 - val_accuracy: 0.2900\n",
       "Epoch 5/10\n",
-      "\u001b[1m85/85\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 9ms/step - accuracy: 0.9263 - loss: 0.4658 - val_accuracy: 0.9200 - val_loss: 0.2764\n",
+      "25/25 [==============================] - 1s 20ms/step - loss: 1.0918 - accuracy: 0.4000 - val_loss: 1.0869 - val_accuracy: 0.3400\n",
       "Epoch 6/10\n",
-      "\u001b[1m85/85\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 9ms/step - accuracy: 0.9573 - loss: 0.2071 - val_accuracy: 0.9500 - val_loss: 0.2038\n",
+      "25/25 [==============================] - 1s 20ms/step - loss: 1.0655 - accuracy: 0.5387 - val_loss: 1.0333 - val_accuracy: 0.5950\n",
       "Epoch 7/10\n",
-      "\u001b[1m85/85\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 9ms/step - accuracy: 0.9720 - loss: 0.1414 - val_accuracy: 0.9500 - val_loss: 0.1783\n",
+      "25/25 [==============================] - 1s 21ms/step - loss: 0.9600 - accuracy: 0.7287 - val_loss: 0.8280 - val_accuracy: 0.8900\n",
       "Epoch 8/10\n",
-      "\u001b[1m85/85\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 9ms/step - accuracy: 0.9590 - loss: 0.1234 - val_accuracy: 0.9450 - val_loss: 0.1521\n",
+      "25/25 [==============================] - 1s 23ms/step - loss: 0.6984 - accuracy: 0.8575 - val_loss: 0.5155 - val_accuracy: 0.9100\n",
       "Epoch 9/10\n",
-      "\u001b[1m85/85\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 9ms/step - accuracy: 0.9708 - loss: 0.1052 - val_accuracy: 0.9550 - val_loss: 0.1362\n",
+      "25/25 [==============================] - 1s 21ms/step - loss: 0.4264 - accuracy: 0.9362 - val_loss: 0.3459 - val_accuracy: 0.9200\n",
       "Epoch 10/10\n",
-      "\u001b[1m85/85\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 9ms/step - accuracy: 0.9711 - loss: 0.0928 - val_accuracy: 0.9500 - val_loss: 0.1448\n"
+      "25/25 [==============================] - 1s 21ms/step - loss: 0.2799 - accuracy: 0.9575 - val_loss: 0.2440 - val_accuracy: 0.9200\n"
      ]
     }
    ],
@@ -242,7 +234,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
